--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,10 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>15.0.1</version>
-        </dependency>
-    </dependencies>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency></dependencies>
     <build>
         <plugins>
             <plugin>
