--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,10 +23,16 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn package --f pom.xml
-    - name: Populate staging directory
-      run: mkdir staging && cp target/* staging
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: cab302-major-project
-        path: staging
+      
+  upload:
+  
+      runs-on: windows-latest
+      
+      steps:
+      - name: Populate Staging Directory
+        run: mkdir staging && cp target/* staging
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: cab302-major-project
+          path: staging
