--- a/pom.xml
+++ b/pom.xml
@@ -123,27 +123,6 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>assemble</id>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <descriptors>
-                                <descriptor>src/main/assembly/assembly.xml</descriptor>
-                            </descriptors>
-                            <finalName>cab302-major-project</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>2.5</version>
                 <executions>
@@ -161,7 +140,9 @@
                                     <followSymlinks>false</followSymlinks>
                                     <useDefaultExcludes>false</useDefaultExcludes>
                                     <excludes>
-                                        <exclude>cab302-major-project.zip</exclude>
+                                        <exclude>client.jar</exclude>
+                                        <exclude>server.jar</exclude>
+                                        <exclude>*.properties</exclude>
                                     </excludes>
                                 </fileset>
                             </filesets>
