--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,5 @@ jobs:
       with:
         name: cab302-major-project
         path: staging
+    - name: Test with Maven
+      run: mvn -B test --file pom.xml
