--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <version>4.13.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.0</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
